--- a/examples/secrets/example-secret.yaml
+++ b/examples/secrets/example-secret.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: rancher
+  name: gke
 type: Opaque
 stringData:
-  token: something
-  url: something
+  service-account:
+    'teste'
